<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SmartPi</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="yuk_masuk_ke_aplikasi_smartpi_ndan_mulai_belajar_bersama_kami">Yuk, Masuk ke aplikasi SmartPi dan mulai belajar bersama kami</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_pernah_mendaftar">Sudah Pernah Mendaftar?</string>
    <string name="aktivitasi_akun">Aktivitasi Akun</string>
    <string name="daftar_akun_sekarang">Daftar Akun Sekarang</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="yuk_daftar_ke_aplkasi_smartpi_dan_coba_belajar_bersama_kami">Yuk, daftar ke aplkasi SmartPi dan coba belajar bersama kami</string>
    <string name="nama">Nama</string>
    <string name="phone">Phone</string>
    <string name="yuk_masuk_ke_aplikasi_smartpi_dan_mulai_belajar_bersama_kami">Yuk, masuk ke aplikasi SmartPi dan mulai belajar bersama kami</string>
    <string name="_62">+62</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_telepon_anda">No. Telepon anda</string>
    <string name="kata_kunci">Kata Kunci</string>
    <string name="lupa_kata_kunci"><u>Lupa Kata Kunci?</u></string>
    <string name="negara">Negara</string>
    <string name="kode_aktivasi">Kode Aktivasi</string>
    <string name="masukan_kode_aktivasi">Masukan Kode Aktivasi</string>
    <string name="subtitle_kode_aktivasi">Kode aktivasi Anda dikirimkan melalui WhatsApp. Periksa WhatsApp Anda!</string>
    <string name="kirim_ulang_kode_registrasi"><u>Kirim ulang kode registrasi</u></string>
    <string name="beranda">Beranda</string>
    <string name="kelas">Kelas</string>
    <string name="pembelian">Pembelian</string>
    <string name="bantuan">Bantuan</string>
    <string name="lain">Lain</string>
    <string name="hi_nama">Hi,</string>
    <string name="tidak_ada_paket_yang_aktif">Tidak ada paket yang aktif</string>
    <string name="program_kami">Program kami</string>
    <string name="kamu_belum_berlangganan">Kamu Belum Berlangganan</string>
    <string name="promo_untuk_kamu">Promo untuk kamu</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="jadwal_kamu">Jadwal Kamu</string>
    <string name="anda_belum_memiliki_jadwal">Anda belum memiliki jadwal</string>
    <string name="coba_1x_pertemuan">Coba 1x Pertemuan</string>
    <string name="ubah_kata_kunci">Ubah kata kunci</string>
    <string name="kembali"><u>Kembali</u></string>
    <string name="jam">Jam</string>
    <string name="guru">Guru</string>
    <string name="hari_dd_mm_yyyy">hari,dd MM yyyy</string>
    <string name="masukan_nomor_lupa_password">Masukan nomor handphone yang anda gunakan untuk mendaftar. Kode verifikasi akan dikirimkan ke nomor Anda</string>
    <string name="masukan_kode_verifikasi_yang_dikirim_ke_hp_anda_untuk_mengubah_kata_kunci">Masukan kode Verifikasi yang dikirim ke HP anda untuk mengubah kata kunci</string>
    <string name="verifikasi_token">Verifikasi Token</string>
    <string name="silahkan_masukan_kata_kunci_yang_baru">Silahkan masukan kata kunci yang baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="detail_jadwal">Detail Jadwal</string>
    <string name="batalkan_jadwal">Batalkan Jadwal</string>
    <string name="persiapan_kelas">Persiapan Kelas</string>
    <string name="masuk_kelas">Masuk Kelas</string>
    <string name="perhatikan_poin_berikut_sebelum_memulai_kelas">Perhatikan poin berikut sebelum memulai kelas :</string>
    <string name="syarat_1">Pengalaman proses belajar mengajar terbaik adalah menggunakan PC atau Laptop. Pastikan Anda menggunakan PC atau Laptop dan tidak menggunakan Handphone Anda.</string>
    <string name="syarat2">Pastikan Anda menggunakan paket internet kabel, bukan hotspot dengan kecepatan 20 mbps minimum</string>
    <string name="syarat3">Browser yang digunakan adalah chrome untuk Windows OS dan Safari untuk macbook.</string>
    <string name="syarat4">Allow izin untuk kamera dan microphone sebelum kelas dimulai bila ditanya.</string>
    <string name="syarat5">Bila ada masalah kestabilan jaringan coba matikan video dan gunakan audio saja serta whiteboard dan materi presentasi saja.</string>
    <string name="yuk_daftar_di_aplikasi_smartpi_dan_coba_belajar_bersama_kami">Yuk, daftar di aplikasi SmartPi dan coba belajar bersama kami.</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="paket_trial_anda_belum_memiliki_jadwal">Paket trial anda belum memiliki jadwal</string>
    <string name="buat_jadwal_untuk_program_trial_anda_sekarang">Buat Jadwal untuk program trial anda sekarang</string>
    <string name="buat_jadwal">Buat Jadwal</string>
    <string name="anda_belum_memilih_trial">Anda belum memilih trial</string>
    <string name="silahkan_pilih_trial_yang_diinginkan">Silahkan pilih trial yang diinginkan</string>
    <string name="pilih_trial">Pilih Trial</string>
    <string name="mengaji">Mengaji</string>
    <string name="bahasa_inggris">Bahasa Inggris</string>
    <string name="akademik">Akademik</string>
    <string name="pilih_jadwal">Pilih Jadwal</string>
    <string name="paket">Paket</string>
    <string name="kamu_belum_buat_jadwal_nih">Kamu belum buat jadwal, nih</string>
    <string name="yuk_buat_jadwal_kamu_dengan_klik_tombol_di_bawah">Yuk, buat jadwal kamu dengan klik tombol + di bawah</string>
    <string name="rating">rating</string>
    <string name="lihat_profil">Lihat Profil</string>
    <string name="pembuatan_jadwal_maksimal_6_jam_sebelum_kelas_dimulai">Pembuatan jadwal maksimal 6 jam sebelum kelas dimulai</string>
    <string name="guru_yang_dipilih">Guru yang dipilih :</string>
    <string name="_1_sesi">1 Sesi</string>
    <string name="_2_sesi">2 Sesi</string>
    <string name="lainnya">Lainnya</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="syarat_amp_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="keluar">Keluar</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="pilih_slot">Pilih Slot</string>
    <string name="lihat_paket">Lihat Paket</string>
    <string name="ayo_segera_berlangganan_untuk_meraih_masa_depan_cemerlang">Ayo segera berlangganan untuk meraih masa depan cemerlang</string>
    <string name="pra_kerja">Pra Kerja</string>
    <string name="kursus_prakerja_untuk_meningkatkan_skill_kerja_anda">Kursus prakerja untuk meningkatkan skill kerja anda</string>
    <string name="langganan_smartpi">Langganan Smartpi</string>
    <string name="satu_kali_pertemuan_untuk_satu_program">Satu kali pertemuan untuk satu program</string>
    <string name="coba_gratis">Coba Gratis</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="konfirmasi_kata_kunci">Konfirmasi Kata Kunci</string>
    <string name="tidak_ada_riwayat_jadwal">Tidak Ada Riwayat Jadwal</string>
    <string name="ada_dapat_membuat_jadwal_pada_layar_jadwal">Ada dapat membuat jadwal pada layar Jadwal</string>
    <string name="bagaimana_gurunya">Bagaimana gurunya?</string>
    <string name="asal">Asal</string>
    <string name="tulis_alasan">Tulis Alasan</string>
    <string name="tulis_pesan_kamu">Tulis Pesan Kamu</string>
    <string name="feedback_dari_guru">Feedback dari guru</string>
    <string name="lihat_feedback">Lihat Feedback</string>
    <string name="simpan">Simpan</string>
    <string name="status">status</string>
    <string name="kelas_bermasalah">Kelas Bermasalah</string>
    <string name="guru_tidak_hadir">Guru tidak hadir</string>
    <string name="jaringan_bermasalah">Jaringan bermasalah</string>
    <string name="kenapa_kelas_belum_selesai">Kenapa kelas belum selesai?</string>
    <string name="pilih_guru">Pilih Guru</string>
    <string name="filter">Filter</string>
    <string name="rentang_waktu">Rentang Waktu</string>
    <string name="tampilkan">Tampilkan</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="harga">Harga</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="detail_paket">Detail Paket</string>
    <string name="_0x">0X</string>
    <string name="_0_bulan">0 Bulan</string>
    <string name="_0_menit">0 Menit</string>
    <string name="x_sesi">1x Sesi</string>
    <string name="keunggulan_kami">Keunggulan Kami</string>
    <string name="keunggulan_1">Jadwal dan Tempat Fleksibel</string>
    <string name="deskripsi_keunggulan_1">Putra-putri Anda akan belajar dengan mudah kapanpun dan dimanapun dan bisa membatalkan jadwal tanpa khawatir harus kehilangan sesi.</string>
    <string name="keunggulan_2">Guru Yang Berkualitas</string>
    <string name="deskripsi_keunggulan_2">Menjamin guru yang mengajar putra-putri anda berkualifikasi dan berpengalaman. Kami menyeleksi guru dengan ketat melalui rekrutmen yang ketat. Pengajar kami adalah lulusan universitas ternama.</string>
    <string name="keunggulan_3">Mutu Yang Terbukti</string>
    <string name="deskripsi_keunggulan_3">Sudah lebih dari 10 ribu kelas kami menyelenggarakan bagi klien besar kami seperti : BTPN, BPJS KETENAGAKERJAAN, GMF, dan Sebagainya. Kami juga menggunakan teknologi video conference sendiri yang memudahkan peserta untuk belajar karena didesign untuk kelas online.</string>
    <string name="lanjut">Lanjut</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="masa_aktif">Masa Aktif</string>
    <string name="tanggal_pemesanan">Tanggal Pemesanan</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="masukan_kode_voucher_anda">Masukan Kode Voucher Anda</string>
    <string name="detail_pembayaran">Detail Pembayaran</string>
    <string name="bayar">Bayar</string>
    <string name="wallet">Wallet</string>
    <string name="bank_transfer_and_others">Bank Transfer &amp; others</string>
    <string name="masukan_nomor_handphone_yang_terhubung_dengan_akun_wallet_anda">Masukan nomor handphone yang terhubung dengan akun Wallet Anda.</string>
    <string name="perhatian">Perhatian: <br />Hanya menerima nomor Indonesia yang sudah terhubung dengan akun e-wallet yang sudah di pilih</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="conteh_81234567890">Contoh: 81234567890</string>
    <string name="lanjutkan_pembayaran">Lanjutkan Pembayaran</string>
    <string name="metode_pembayaran_dengan_wallet">Metode Pembayaran dengan wallet</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="transfer_ke_nbank_mandiri">Transfer ke: <br />Bank Mandiri</string>
    <string name="jumlah_yang_harus_dibayar">Jumlah yang harus dibayar</string>
    <string name="atau">atau</string>
    <string name="masuk_dengan_nomor_handphone"><u>Masuk dengan nomor handphone</u></string>
    <string name="masuk_dengan_email"><u>Masuk dengan Email</u></string>
    <string name="pilih_akun_anda">Pilih Akun Anda</string>
    <string name="masuk_sebagai_nama">Masuk Sebagai Nama</string>
    <string name="matematika">Matematika</string>
    <string name="group_class">Group Class</string>
    <string name="tidak_ada_jadwal">Tidak Ada Jadwal</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="masukan_kata_sandri_lama_anda_terlebih_dahulu_kemudian_kata_sandi_baru">Masukan kata sandri lama Anda terlebih dahulu, kemudian kata sandi baru</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="belum_dikonfirmasi_guru">Belum dikonfirmasi Guru</string>
    <string name="apakah_anda_yakin">Apakah Anda yakin?</string>
</resources>